--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button class="custom-btn" id="changeSceneBtn" disabled>Change to Scene "Test"</button>
         <button class="custom-btn" id="changeToSceneBtn" disabled>Change to Scene "Scène"</button>
         <button class="custom-btn" id="toggleMuteBtn" disabled>Mute/Unmute Microphone</button>
+        <button class="custom-btn" id="activateNameOverlayBtn" disabled>Activate NameOverlay</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/obs-websocket-js"></script>
     <script src="dist/bundle.js"></script>
