change to scene named intro is added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button class="custom-btn" id="disconnectBtn" disabled>Disconnect</button>
         <button class="custom-btn" id="startStreamBtn" disabled>Start Stream</button>
         <button class="custom-btn" id="stopStreamBtn" disabled>Stop Stream</button>
-        <button class="custom-btn" id="changeSceneBtn" disabled>Change to Scene "Test"</button>
+        <button class="custom-btn" id="changeToIntroBtn" disabled>Change to Scene "INTRO"</button>
         <button class="custom-btn" id="changeToSceneBtn" disabled>Change to Scene "Scène"</button>
         <button class="custom-btn" id="toggleMuteBtn" disabled>Mute/Unmute Microphone</button>
         <button class="custom-btn" id="activateNameOverlayBtn" disabled>Activate NameOverlay</button>
