--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <button class="custom-btn" id="startStreamBtn" disabled>Start Stream</button>
         <button class="custom-btn" id="stopStreamBtn" disabled>Stop Stream</button>
         <button class="custom-btn" id="changeToIntroBtn" disabled>Change to Scene "INTRO"</button>
-        <button class="custom-btn" id="changeToSceneBtn" disabled>Change to Scene "Scène"</button>
+        <button class="custom-btn" id="changeToPauseBtn" disabled>Change to Scene "PAUSE"</button>
+        <button class="custom-btn" id="changeToOutroBtn" disabled>Change to Scene "OUTRO"</button>
+        <button class="custom-btn" id="changeToCamBtn" disabled>Change to Scene "CAM"</button>
         <button class="custom-btn" id="toggleMuteBtn" disabled>Mute/Unmute Microphone</button>
         <button class="custom-btn" id="activateNameOverlayBtn" disabled>Activate NameOverlay</button>
     </div>
