ToggleMuteBtn for Desktop added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <button class="custom-btn" id="changeToOutroBtn" disabled>Change to Scene "OUTRO"</button>
         <button class="custom-btn" id="changeToCamBtn" disabled>Change to Scene "CAM"</button>
         <button class="custom-btn" id="toggleMuteBtn" disabled>Mute/Unmute Microphone</button>
+        <button class="custom-btn" id="toggleDesktopAudioBtn" disabled>Mute/Unmute Audio du bureau</button>
+        <!-- <button class="custom-btn" id="toggleCamBtn" disabled>Toggle Webcam</button> -->
         <button class="custom-btn" id="activateNameOverlayBtn" disabled>Activate NameOverlay</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/obs-websocket-js"></script>
