--- a/index.html
+++ b/index.html
@@ -9,21 +9,26 @@
 </head>
 
 <body>
-    <h1>OBS Studio Controller</h1>
-    <div class="container">
-        <button class="custom-btn" id="connectBtn">Connect to OBS</button>
-        <button class="custom-btn" id="disconnectBtn" disabled>Disconnect</button>
-        <button class="custom-btn" id="startStreamBtn" disabled>Start Stream</button>
-        <button class="custom-btn" id="stopStreamBtn" disabled>Stop Stream</button>
-        <button class="custom-btn" id="changeToIntroBtn" disabled>Change to Scene "INTRO"</button>
-        <button class="custom-btn" id="changeToPauseBtn" disabled>Change to Scene "PAUSE"</button>
-        <button class="custom-btn" id="changeToOutroBtn" disabled>Change to Scene "OUTRO"</button>
-        <button class="custom-btn" id="changeToCamBtn" disabled>Change to Scene "CAM"</button>
-        <button class="custom-btn" id="toggleMuteBtn" disabled>Mute/Unmute Microphone</button>
-        <button class="custom-btn" id="toggleDesktopAudioBtn" disabled>Mute/Unmute Audio du bureau</button>
-        <button class="custom-btn" id="toggleCameraBtn" disabled>Toggle Camera</button>
-        <button class="custom-btn" id="activateNameOverlayBtn" disabled>Activate NameOverlay</button>
-    </div>
+    <main>
+        <h1>OBS Studio Controller</h1>
+        <div class="container">
+            <button class="custom-btn" id="connectBtn">Connect to OBS</button>
+            <button class="custom-btn" id="disconnectBtn" disabled>Disconnect</button>
+            <button class="custom-btn" id="startStreamBtn" disabled>Start Stream</button>
+            <button class="custom-btn" id="stopStreamBtn" disabled>Stop Stream</button>
+            <button class="custom-btn" id="changeToIntroBtn" disabled>Change to Scene "INTRO"</button>
+            <button class="custom-btn" id="changeToPauseBtn" disabled>Change to Scene "PAUSE"</button>
+            <button class="custom-btn" id="changeToOutroBtn" disabled>Change to Scene "OUTRO"</button>
+            <button class="custom-btn" id="changeToCamBtn" disabled>Change to Scene "CAM"</button>
+            <button class="custom-btn" id="toggleMuteBtn" disabled>Mute/Unmute Microphone</button>
+            <button class="custom-btn" id="toggleDesktopAudioBtn" disabled>Mute/Unmute Audio du bureau</button>
+            <button class="custom-btn" id="toggleCameraBtn" disabled>Toggle Camera</button>
+            <button class="custom-btn" id="startAbonneMediaBtn" disabled>Source Abonné</button>
+
+            <!-- <button class="custom-btn" id="activateNameOverlayBtn" disabled>Activate NameOverlay</button> -->
+
+        </div>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/obs-websocket-js"></script>
     <script src="dist/bundle.js"></script>
 </body>
